2006-12-08  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs: Move extra .sln specific info from
	ExtendedProperties to SlnData and store that in the ExtendedProperties.
	* MSBuildFileFormat.cs: Likewise, move to MSBuildData.

2006-12-03  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (WriteProjects): Add 'baseDirectory' param.
	Path should be relative to solution file's directory.
	(HandleCombineEntryAdded): Emit 'guid' with the project reference.
	Path should be relative to the project's base directory.
	* MSBuildFileFormat.cs (AppendChild): Make internal.

2006-12-03  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (HandleCombineEntryAdded): Update project references
	after conversion.

2006-12-02  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (SetHandlers): Add a 'setEntries' param. Setting
	handlers on entries is required when loading from a file.

2006-12-02  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (SetHandlers): Don't set handlers on contained
	combines. Set *Added handler instead of *Modified.
	(HandleCombineEntryModified): Remove.
	(HandleCombineEntryAdded): New.
	(ConvertToMSBuild): New. Convert a Mds/Mdp based project to msbuild
	format (if required).
	* MSBuildFileFormat.cs (WriteFile): Split into this and ..
	(WriteFileInternal): .. this. Create a new XmlDocument if required.
	(SaveProject): Save a DotNetProject to the corresponding .*proj .
	(LoadProject): Set handlers.
	(SetupHandlers): New.
	(ReferenceToXmlNode): New.
	(FileToXmlNode): New.
	(HandleFileRenamed): New.

2006-11-29  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs: Add basic write/save support.
	* MSBuildFileFormat.cs (WriteFile): OutputPath should be relative.
	(ParseProject): Rename to ..
	(LoadProject): .. this. Set default name of the project.
	Create new config only if it doesn't already exist.	
	(HandleRename): Change the name of the project file when the project is
	renamed.

2006-11-20  Ankit Jain  <jankit@novell.com>
